# dreamtt

./: .gitignore  LICENSE  README.md  dreamtt.opam  dune  index.html  index.mld
.github/: FUNDING.yml
.github/workflows/: ocaml.yml  odoc.yml
basis/: Basis.ml  Basis.mli  Bwd.ml  Bwd.mli  Error.ml  Error.mli  Monad.ml  Monad.mli  Pp.ml  Pp.mli  PpExn.ml  Reader.ml  Reader.mli  Symbol.ml  Symbol.mli  dune
core/: Core.ml  Core.mli  Effect.ml  Effect.mli  EffectOps.ml  Env.ml  Env.mli  Equate.ml  Equate.mli  Eval.ml  Eval.mli  Local.ml  Local.mli  Logic.ml  Logic.mli  Prop.ml  Prop.mli  RefineM.ml  RefineM.mli  Refiner.ml  Rule.ml  Rule.mli  Syntax.ml  Theory.ml  Theory.mli  dune  env.ml  theory.ml
core/rules/: BoolRules.ml  ExtRules.ml  PiRules.ml  RcdRules.ml  RuleKit.ml  SgRules.ml  TlRules.ml
dreamtt/: index.html
dreamtt/Basis/: index.html
dreamtt/Basis__/: index.html
dreamtt/Basis__Bwd/: index.html
dreamtt/Basis__Error/: index.html
dreamtt/Basis__Monad/: index.html
dreamtt/Basis__Pp/: index.html
dreamtt/Basis__PpExn/: index.html
dreamtt/Basis__Reader/: index.html
dreamtt/Basis__Symbol/: index.html
dreamtt/Basis__SymbolMap/: index.html
dreamtt/Core/: index.html
dreamtt/Core__/: index.html
dreamtt/Core__Effect/: index.html
dreamtt/Core__EffectOps/: index.html
dreamtt/Core__Env/: index.html
dreamtt/Core__Equate/: index.html
dreamtt/Core__Eval/: index.html
dreamtt/Core__Local/: index.html
frontend/: Code.ml  Distiller.ml  Driver.ml  Driver.mli  Elaborator.ml  Frontend.ml  Frontend.mli  dune
test/: runtests.sh
(+177 files in other folders)
